--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,12 +1,33 @@
+@import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@200;300;400;600;700&display=swap');
 *{
   margin: 0;
   padding: 0;
+  font-family: 'Source Sans Pro', sans-serif;
 }
 a {
   text-decoration: none;
   color: black;
 }
+ul{
+  list-style: none;
+}
 .container {
-  width: 1200px;
+  max-width: 1100px;
   margin: 0 auto;
+  padding: 0 15px;
+}
+.btn {
+  background-color: #f2f2f2;
+  color: #20a303;
+  outline: none;
+  border: 1px solid #f2f2f2;
+}
+.btn-sm {
+  width: 140px;
+  height: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-weight: 600;
+  font-size: 0.9rem;
 }
