Update global styles

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -21,6 +21,7 @@ ul{
   color: #20a303;
   outline: none;
   border: 1px solid #f2f2f2;
+  cursor: pointer;
 }
 .btn-sm {
   width: 140px;
@@ -30,4 +31,24 @@ ul{
   align-items: center;
   font-weight: 600;
   font-size: 0.9rem;
+}
+.products-list {
+  width: 100%;
+  display: grid;
+  grid-template-columns: auto auto auto auto;
+  justify-content: space-between;
+  grid-row-gap: 40px;
+}
+h1 {
+  color: #0000c6;
+  font-weight: 300;
+  font-size: 2.5rem;
+}
+h2 {
+  color: #0000c6;
+  font-size: 2em;
+  font-weight: 300;
+  margin-top: 40px;
+  margin-bottom: 20px;
+  text-align: center;
 }
