Update global styles

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -24,8 +24,8 @@ ul{
   cursor: pointer;
 }
 .btn-sm {
-  width: 140px;
-  height: 40px;
+  padding: 10px;
+  width: 170px;
   display: flex;
   justify-content: center;
   align-items: center;
