Update global styles

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -12,6 +12,8 @@ ul{
   list-style: none;
 }
 .container {
+  min-height: 100%;
+  width: 100%;
   max-width: 1100px;
   margin: 0 auto;
   padding: 0 15px;
@@ -36,7 +38,7 @@ ul{
   width: 100%;
   display: grid;
   grid-template-columns: auto auto auto auto;
-  justify-content: space-between;
+  grid-column-gap: 30px;
   grid-row-gap: 40px;
 }
 h1 {
