--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -15,8 +15,9 @@ ul{
   min-height: 100%;
   width: 100%;
   max-width: 1100px;
-  margin: 0 auto;
+  margin: 0 auto 100px auto;
   padding: 0 15px;
+
 }
 .btn {
   background-color: #f2f2f2;
@@ -34,6 +35,15 @@ ul{
   font-weight: 600;
   font-size: 1rem;
 }
+.btn-la {
+  display: flex;
+  width: 100%;
+  height: 40px;
+  font-size: 1.1rem;
+  justify-content: center;
+  align-items: center;
+}
+
 .products-list {
   width: 100%;
   display: grid;
