--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,66 +1,25 @@
 @import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@200;300;400;600;700&display=swap');
-*{
-  margin: 0;
-  padding: 0;
-  font-family: 'Source Sans Pro', sans-serif;
-}
-a {
-  text-decoration: none;
-  color: black;
-}
-ul{
-  list-style: none;
-}
-.container {
-  min-height: 100%;
-  width: 100%;
-  max-width: 1100px;
-  margin: 0 auto 100px auto;
-  padding: 0 15px;
 
-}
-.btn {
-  background-color: #f2f2f2;
-  color: #20a303;
-  outline: none;
-  border: 1px solid #f2f2f2;
-  cursor: pointer;
-}
-.btn-sm {
-  padding: 10px;
-  width: 170px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-weight: 600;
-  font-size: 1rem;
-}
-.btn-la {
-  display: flex;
-  width: 100%;
-  height: 40px;
-  font-size: 1.1rem;
-  justify-content: center;
-  align-items: center;
+@tailwind base;
+
+@tailwind components;
+
+@tailwind utilities;
+
+
+@layer utilities {
+  .items-normal {
+    align-items: normal;
+  }
 }
 
-.products-list {
-  width: 100%;
-  display: grid;
-  grid-template-columns: auto auto auto auto;
-  grid-column-gap: 30px;
-  grid-row-gap: 40px;
+.app {
+  flex-grow: inherit;
+  grid-template-rows: auto 1fr auto !important;
+  @apply grid grid-rows-3 h-screen
 }
-h1 {
-  color: #0000c6;
-  font-weight: 300;
-  font-size: 2.5rem;
-}
-h2 {
-  color: #0000c6;
-  font-size: 2em;
-  font-weight: 300;
-  margin-top: 40px;
-  margin-bottom: 20px;
-  text-align: center;
+
+
+.nuxt-link-exact-active {
+  @apply text-gray-900
 }
